# splitter

server/: pyproject.toml
server/splitter/api/: app.py
server/splitter/splitter/: splitter.py
website/: .env.development  .env.production  .env.staging  Jenkinsfile  package-lock.json  package.json  vue.config.js
website/public/: index.html
website/src/: App.vue  main.ts  shims-vue.d.ts
website/src/components/: FileUpload.vue
website/src/router/: index.ts
website/src/views/: About.vue  Home.vue
