[tool.poetry]
name = "splitter"
version = "0.1.0"
description = ""
authors = ["Luc Leonard <github@luc-leonard.fr>"]

[tool.poetry.dependencies]
python = ">3.6.1,<3.9"
spleeter = "^2.1.2"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
